tests/assets/www/1.1/errors/basic_error.json.php
<?php

header('Content-Type: application/json; charset=UTF-8', true, 400);

?>
{
    "errors" : [
        {
            "code"    : 123,
            "message" : "ERROR"
        }
    ]
}
